@@ -1,3 +1,7 @@
+2008-02-17 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCmain.c (linkEdit): emit -z when using --debug for z80
+
 2008-02-17 Raphael Neider <rneider AT web.de>
 
 	* src/pic16/genarith.c,
